<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:padding="20dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <include
            android:id="@+id/types_container"
            layout="@layout/types_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/about_label"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/types_container"
            tools:layout_constraintTop_toBottomOf="@id/types_container" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/textViewAbout">

            <LinearLayout
                android:id="@+id/linearLayoutWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/weight" />

                    <TextView
                        android:id="@+id/textViewWeightData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewWeightLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="Weight"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/straighten" />

                    <TextView
                        android:id="@+id/textViewHeightData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewHeightLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="Height"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutAbility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <include
                    android:id="@+id/movesContainer"
                    layout="@layout/moves_layout" />

                <TextView
                    android:id="@+id/textViewMovesLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/moves_label"
                    android:textAlignment="center"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="LoremIpSum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:layout_constraintTop_toBottomOf="@id/textView9">

            <TextView
                android:id="@+id/textview_base_stat_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/base_stats_label"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewHpLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="8dp"
                        android:text="@string/hp_label"
                        android:textAlignment="textEnd"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewAtkLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="8dp"
                        android:text="@string/atk_label"
                        android:textAlignment="viewEnd"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewDefLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="8dp"
                        android:text="@string/def_label"
                        android:textAlignment="viewEnd"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewSatkLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="8dp"
                        android:text="@string/satk_label"
                        android:textAlignment="viewEnd"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewSdefLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="8dp"
                        android:text="@string/sdef_label"
                        android:textAlignment="viewEnd"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewSpdLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="8dp"
                        android:text="@string/spd_label"
                        android:textAlignment="viewEnd"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewHpData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="TextView" />

                    <TextView
                        android:id="@+id/textViewAtkData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="TextView" />

                    <TextView
                        android:id="@+id/textViewDefData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="TextView" />

                    <TextView
                        android:id="@+id/textViewSatkData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="TextView" />

                    <TextView
                        android:id="@+id/textViewSdefData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="TextView" />

                    <TextView
                        android:id="@+id/textViewSpdData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/progressBarHp"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="233" />

                    <ProgressBar
                        android:id="@+id/progressBarAtk"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="233" />

                    <ProgressBar
                        android:id="@+id/progressBarDef"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="233" />

                    <ProgressBar
                        android:id="@+id/progressBarSatk"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="233" />

                    <ProgressBar
                        android:id="@+id/progressBarSdef"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="233" />

                    <ProgressBar
                        android:id="@+id/progressBarSpd"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="233" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>